# TidalMusic

./: .gitignore  2019.tidal  BootTidal.hs  FunctionReference.md  Greenslaves  Greenslaves.tidal  LICENSE  PatternReference.md  Tidal.cabal  patterns.md  stack.yaml  vanna.tidal
.stack-work/: stack.sqlite3
.stack-work/ghci/572779a0/: cabal_macros.h
.stack-work/ghci/6928dcb0/: cabal_macros.h
.stack-work/ghci/6b81a250/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/5358cd10b81a5794432b67148894cc1fbcfc5e55f3d4a7d5646256166467cc9d/8.8.4/pkgdb/: Tidal-0.0.0.0-EBjQVDv8Qwo3smnmYwgpln.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/6d4b0d3bdd8193298faf23c13c6bbfc01bf787de5edce945d4d4adf9a25fdcf4/8.8.4/pkgdb/: Tidal-0.0.0.0-F8Sb7rI86JT8OJgSNsPvcE.conf  package.cache
.stack-work/install/x86_64-linux-tinfo6/b33b0797e4e8206446087bc8d80bd25440c7663eb4d082ba2d048987f7daa989/8.10.4/pkgdb/: Tidal-0.0.0.0-4mu5NhKiSA05oiQRIeSSMc.conf  package.cache
JustDoIt/: 19.03.23.tidal  190217.tidal  190308.tidal  190313.tidal  190413.tidal  190418.tidal  190428.tidal  Greenslaves.tidal  Kati.tidal  Repeat.tidal  TanyaParty.tidal  Yakamoto.tidal  afterBath.tidal  afterJapan.tidal  alex.tidal  ambiant.tidal  justDoIt.tidal  vannaCode.tidal
docs/: FunctionReference.md  PatternReference.md  rythms.tidal  samples
longWay/: ambiant.tidal
src/: BootTidal.hs
src/Contemplative/2019/201902/: 190212.tidal  190215.tidal
src/Contemplative/2019/201903/: 190331.tidal
src/Contemplative/2019/201904/: 190418.tidal
src/Contemplative/2019/201906/: 190609.tidal
src/Contemplative/2019/201907/: 190712.tidal
src/Contemplative/2020/202001/: 20200117.tidal  20200118.tidal
src/Contemplative/2020/202011/: 20201120.tidal
src/Contemplative/2021/: 20210117.tidal
src/Contemplative/2022/: 20220521.tidal  20220804.tidal
src/Contemplative/noDate/: Repeat.tidal  vanna.tidal
src/JustDoIt/2019/201902/: 190203.tidal  190209.tidal  190221.tidal  190223.tidal
src/JustDoIt/2019/201904/: 190428.tidal
src/JustDoIt/2019/201905/: 190510.tidal
src/JustDoIt/2019/201909/: 201922.tidal
src/JustDoIt/2019/201911/: 191115.tidal  191129.tidal
src/JustDoIt/2019/201912/: 191201.tidal  191203.tidal
src/JustDoIt/201902/: 190207.tidal
src/JustDoIt/201905/: algorave2019.tidal
src/JustDoIt/201907/: 190702.tidal  190721.tidal
src/JustDoIt/201908/: 190818_pattern_and_greenslaves.tidal
src/JustDoIt/201909/: 20190915-rumbling.tidal
src/JustDoIt/2020/202001/: 20200116.tidal  20200118.tidal
src/JustDoIt/2020/202011/: 20201120.tidal
src/JustDoIt/2021/: 20210117.tidal  20210226.tidal
src/JustDoIt/noDate/: Greenslaves.tidal  stream2.tidal
src/docs/: Guide.tidal  Reference.tidal  chords  samples
