cabal-version:       2.0
name:                Tidal
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/willbasky/TidalMusic
license:             MIT
license-file:        LICENSE
author:              willbasky
maintainer:          willbasky
copyright:           2019 willbasky
category:            Media
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/willbasky/TidalMusic.git

library
  hs-source-dirs: src

  build-depends:       base ^>= 4.12.0.0
                     , tidal

  -- ghc-options:         -Wall
                      --  -threaded
                      --  -rtsopts
                      --  -with-rtsopts=-N
                      --  -Wincomplete-uni-patterns
                      --  -Wincomplete-record-updates
                      --  -Wcompat
                      --  -Widentities
                      --  -Wredundant-constraints
                      --  -fhide-source-paths
                      --  -Wmissing-export-lists
                      --  -Wpartial-fields

  default-language:    Haskell2010


